samples/_failures_safe/1761320540_34bbaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abc03260.c: In function ‘main’:
./samples/SAFE/__tmp_abc03260.c:132:20: error: missing terminating " character
  132 |             printf("Added: %s %s %
      |                    ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_abc03260.c:132:13: error: expected expression at end of input
  132 |             printf("Added: %s %s %
      |             ^~~~~~
./samples/SAFE/__tmp_abc03260.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_abc03260.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_abc03260.c:132:13: error: expected declaration or statement at end of input
